feat: retrieve human processed detection from annotator
* feat: retrieve human processed detection from annotator

* test: verify if annotation task is sent correctly

* test: consume annotation task retrieving event

* test: consume annotation batch retrieving event

* format: apply change requested

* chore: map human detected tile to geojson

* chore: use machine detected tile id as annotated task id

* test: increase coverage